# create-agent-f16fhc

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml  deploy-dev.yml  deploy-prod.yml  deploy-staging.yml  infrastructure-ci.yml  web-ci.yml
blitzy/documentation/: Input Prompt.md  Project Guide.md  Technical Specifications.md
docs/api/: api-examples.md  api-reference.md
docs/architecture/: component-diagram.md  data-flow.md  security.md
docs/development/: coding-standards.md  setup.md  testing.md
docs/operations/: deployment.md  disaster-recovery.md  monitoring.md
docs/user/: user-manual.md
infrastructure/docker/: docker-compose.dev.yml  docker-compose.prod.yml
infrastructure/kubernetes/base/: backend-deployment.yaml  backend-service.yaml  cache-statefulset.yaml  configmap.yaml  db-statefulset.yaml  ingress.yaml  namespace.yaml  secrets.yaml  web-deployment.yaml  web-service.yaml
infrastructure/scripts/: backup.sh  deploy.sh  init-db.sh  monitoring-setup.sh  restore.sh
infrastructure/terraform/: backend.tf
infrastructure/terraform/aws/: main.tf  outputs.tf  provider.tf  variables.tf
src/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  app.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt  wsgi.py
src/backend/api/: __init__.py  routes.py
src/backend/api/admin/: __init__.py  controllers.py  models.py  routes.py  schemas.py  utils.py
src/backend/api/analysis/: __init__.py  controllers.py  models.py  routes.py  schemas.py  utils.py
src/backend/api/auth/: __init__.py  controllers.py  models.py  routes.py  schemas.py  utils.py
src/backend/api/data_sources/: __init__.py  controllers.py  models.py  routes.py  schemas.py  utils.py
src/backend/api/reports/: __init__.py  controllers.py  models.py  routes.py  schemas.py  utils.py
src/backend/connectors/: database_connector.py  erp_connector.py  file_connector.py  generic_api_connector.py  tms_connector.py
src/backend/core/: __init__.py  cache.py  config.py  db.py  exceptions.py  logging.py  schemas.py  security.py  utils.py
src/backend/migrations/: __init__.py  env.py
src/backend/models/: __init__.py  analysis_result.py  audit_log.py  carrier.py  enums.py  freight_data.py  location.py  mixins.py  route.py  time_period.py  user.py
src/backend/schemas/: __init__.py  analysis_result.py  audit_log.py  carrier.py  common.py  freight_data.py  location.py  requests.py  responses.py  route.py  time_period.py  user.py
src/backend/services/: __init__.py  analysis_engine.py  data_ingestion.py  error_handling.py  integration.py  notifications.py  presentation.py  scheduler.py
src/backend/tasks/: __init__.py  analysis.py  cleanup.py  data_export.py  data_import.py  reporting.py  worker.py
src/backend/tests/: __init__.py  conftest.py
src/backend/tests/test_api/: __init__.py  test_analysis.py  test_auth.py  test_data_sources.py  test_reports.py
src/backend/tests/test_connectors/: __init__.py  test_file_connector.py  test_tms_connector.py
src/backend/tests/test_models/: __init__.py  test_analysis_result.py  test_freight_data.py  test_user.py
src/backend/tests/test_services/: __init__.py  test_analysis_engine.py  test_data_ingestion.py  test_integration.py  test_presentation.py
src/backend/tests/test_utils/: __init__.py  test_calculation.py  test_csv_parser.py  test_validators.py
src/backend/utils/: __init__.py  api_client.py  calculation.py  csv_parser.py  currency.py  date_utils.py  db_connector.py  formatters.py  validators.py  visualization.py
src/web/: .dockerignore  .eslintrc.js  .gitignore  Dockerfile  README.md  babel.config.js  cypress.config.ts  docker-compose.yml  jest.config.ts  package.json  tsconfig.json  vite.config.ts  webpack.config.ts
src/web/cypress/: tsconfig.json
src/web/public/: index.html  manifest.json  (+1 more)
(+291 files in other folders)
